[tool.poetry]
name = "music_controller"
version = "0.1.0"
description = ""
authors = ["Rayshard Thompson <rayshard.t123@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
